Fix: ScrollBar style only in userBar

--- a/Core/CSS/UserBar.css
+++ b/Core/CSS/UserBar.css
@@ -41,17 +41,17 @@
 }
 
 /* Scroll bar */
-::-webkit-scrollbar {
+.hasCustomScroll::-webkit-scrollbar {
     width: 13px;
     height: 13px;
 }
 
-::-webkit-scrollbar-track {
+.hasCustomScroll::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     border-radius: 10px;
 }
 
-::-webkit-scrollbar-thumb {
+.hasCustomScroll::-webkit-scrollbar-thumb {
     box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
     border-radius: 10px;
 }
